File opened from "Recent" is Read-Only
Steps to reproduce
- Right click on some text file in "Recent"
- Choose "Open with Gedit"
- File is Read-only even if it should be writable
Reproducible in: nautilus-3.28.1-1.fc28.x86_64
Current behavior
File is Read-Only in opened Gedit window
Expected behavior
File should be writable (if you have permissions to write to it)
Additional information
When I choose "Open File Location" and then edit the file, I can save it just fine (it's writable).
Tested on Fedora 28.