nautilus-file.c: Make writable file opened in recent tab writable again

File opened in recent tab now is read-only
when it is writable.

Replace nautilus_file_info_get_uri ()
with nautilus_file_info_get_activation_uri ()
fix the problem.

https://gitlab.gnome.org/GNOME/nautilus/issues/378